# ed255222-pq

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ed255222-pq/: Cargo.toml
crates/ed255222-pq-solana/: Cargo.toml
crates/ed255222-pq-solana/src/: instructions.rs  lib.rs  processor.rs  state.rs
crates/ed255222-pq/src/: constants.rs  errors.rs  hybrid.rs  keypair.rs  lib.rs  sign.rs  verify.rs
crates/ed255222-pq/tests/: integration.rs
docs/: CFRG-submission-guide.md  SIMD-ed255222-pq.md  benchmark-results.md  draft-patterson-cfrg-ed255222-pq-00.txt
lean/ED255222PQ/: Basics.lean  Correctness.lean  Hybrid.lean  KeyGen.lean  Sign.lean  Verify.lean  lakefile.toml
proposals/: 0393-ed255222-pq.md
test-vectors/: ed255222-pq-tv.json
