[workspace]
members = [
    "crates/ed255222-pq",
    "crates/ed255222-pq-solana",
]
resolver = "2"

[workspace.dependencies]
ml-dsa      = "0.1.1"   # RustCrypto pure-Rust ML-DSA (FIPS 204) — pin >= 0.1.1 (CVE-2026-24850)
sha3        = "0.10"
rand        = "0.9"
zeroize     = { version = "1", features = ["derive"] }
thiserror   = "2"
borsh       = "1"
hex         = "0.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ed25519-dalek = "2"
