[package]
name        = "ed255222-pq"
version     = "0.1.0"
edition     = "2021"
description = "ED255222-PQ: Post-quantum signature profile based on ML-DSA-44 (FIPS 204)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/De-ASI-INTERFACE/ed255222-pq"

[dependencies]
ml-dsa          = { workspace = true }
sha3            = { workspace = true }
rand            = { workspace = true }
zeroize         = { workspace = true }
thiserror       = { workspace = true }
ed25519-dalek   = { workspace = true }

[dev-dependencies]
hex             = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }

[[bin]]
name = "generate-vectors"
path = "src/bin/generate_vectors.rs"
